--- a/login.html
+++ b/login.html
@@ -7,6 +7,43 @@
     <title>login 单例模式</title>
 </head>
 <body>
-    单例模式
+    <script>
+    class LoginForm{
+        constructor() {
+            this.state = 'hide'
+        }
+        show() {
+            if( this.state === 'show'){
+                alert('登录框已经显示') 
+                return ;
+            }
+            this.state = 'show'
+            console.log('登录显示成功')
+        }
+        hide() {
+            if(this.state === 'hide'){
+                alert('登录框已经隐藏')
+                return ;
+            }
+            this.state = 'hide'
+            console.log('登录已经隐藏')
+        }
+    }
+    
+    LoginForm.getInstance = (function() {
+            let intance 
+            return function() {
+                if(!intance) {
+                    intance = new LoginForm()
+                }
+                return intance
+            }
+    })()
+    let login1 = LoginForm.getInstance()
+    login1.show()
+    let login2 = LoginForm.getInstance()
+    login2.hide()
+    console.log(login1===login2)
+    </script>
 </body>
 </html>
